# nexus-codex

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run.py  setup.sh  tsconfig.json
.github/workflows/: deploy-pages.yml  deploy.yml
.skill/devdocs-sync/: SKILL.md
admin-fe/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
admin-fe/src/: App.tsx  index.css  types.ts
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  models.py  models_anthropic.py
app/adapters/: anthropic_adapter.py
app/middleware/: auth.py  ip_ban.py  rate_limit.py
app/routes/: admin.py  chat_completions.py  messages.py  models.py  public.py  responses.py
app/services/: account_bootstrap.py  account_pool.py  account_store.py  admin_emitter.py  chatgpt_adapter.py  chatgpt_client.py  config_store.py  health_check.py  ip_ban_store.py  log_collector.py  log_store.py  metrics_collector.py  metrics_store.py  quota_probe.py  (+4 more)
docs/: admin-panel.md  api-reference.md  ci-cd.md  concurrency-plan.md  design.md  guide-structure.md  index.md  phase.md  todos.md
guide/: index.html  index.md
public/: admin.html
src/: index.ts  types.ts
tests/: conftest.py  test_account_pool.py  test_account_store.py  test_exceptions.py  test_health_check.py  test_ip_ban_store.py  test_metrics_collector.py  test_retry.py  test_routes_admin.py  test_routes_chat.py  test_routes_messages.py  test_routes_responses.py
(+128 files in other folders)
